[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Images/icons/padlock.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CardTable/TurnListDisplay.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0.623529, 1, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="TurnListDisplay" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 14 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblNum" type="Label" parent="."]
margin_right = 25.0
margin_bottom = 14.0
text = "0)"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblTitle" type="Label" parent="."]
anchor_right = 1.0
margin_left = 41.0
margin_top = 1.0
margin_right = -8.0
margin_bottom = 15.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texLock" type="TextureRect" parent="."]
visible = false
margin_left = 25.0
margin_top = -1.0
margin_right = 41.0
margin_bottom = 14.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pnlHighlight" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
